theLanguageEmporium/force-app/main/default/objects/Position_Demographic__c/Position_Demographic__c.object-meta.xml
<CustomObject>
    <label>Position Demographic</label>
    <nameField>
        <displayFormat>POSDEM{00000}</displayFormat>
        <label>Position Demographic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Position Demographics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>