theLanguageEmporium/force-app/main/default/objects/Position_Demographic__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Position Demographics</relationshipLabel>
    <relationshipName>Position_Demographics</relationshipName>
    <type>Lookup</type>
</CustomField>