theLanguageEmporium/force-app/main/default/objects/Position_Demographic__c/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alaskan Native / American Indian / Indigenous American / Native American</fullName>
            </value>
            <value>
                <fullName>Black / Of African Descent</fullName>
            </value>
            <value>
                <fullName>East Asian</fullName>
            </value>
            <value>
                <fullName>Latino</fullName>
            </value>
            <value>
                <fullName>Middle Eastern</fullName>
            </value>
            <value>
                <fullName>Pacific Islander</fullName>
            </value>
            <value>
                <fullName>South Asian</fullName>
            </value>
            <value>
                <fullName>Southeast Asian</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>I prefer to describe myself</fullName>
            </value>
            <value>
                <fullName>I do not wish to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>