theLanguageEmporium/force-app/main/default/objects/Position_Demographic__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Position Demographics</relationshipLabel>
    <relationshipName>Position_Demographics</relationshipName>
    <type>Lookup</type>
</CustomField>