theLanguageEmporium/force-app/main/default/objects/Position_Demographic__c/fields/Veteran_Status__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Status__c</fullName>
    <label>Veteran Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I am a veteran</fullName>
            </value>
            <value>
                <fullName>No, I am not a veteran</fullName>
            </value>
            <value>
                <fullName>I prefer to describe myself</fullName>
            </value>
            <value>
                <fullName>I do not wish to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>